Initial Dashboard Design

--- a/src/pages/hello-ionic/hello-ionic.html
+++ b/src/pages/hello-ionic/hello-ionic.html
@@ -3,21 +3,63 @@
     <button ion-button menuToggle>
       <ion-icon name="menu"></ion-icon>
     </button>
-    <ion-title>Hello Ionic</ion-title>
+    <ion-title>Econth CRM App</ion-title>
   </ion-navbar>
 </ion-header>
 
 
 <ion-content padding>
+  <ion-grid>
+    <ion-row>
+      <ion-col col-12 col-sm>
+        <ion-card color="primary" >
+          <ion-card-header>
+            Appointments
+          </ion-card-header>
+          <ion-card-content>
+            The British use the term "header", 
+            but the American term "head-shot" the English simply refuse to adopt.
+          </ion-card-content>
+        </ion-card>
+      </ion-col>
 
-  <h3>Welcome to your first Ionic app!</h3>
+      <ion-col col-12 col-sm>
+        <ion-card color="danger">
+          <ion-card-header>
+            Notifications
+          </ion-card-header>
+          <ion-card-content>
+            The British use the term "header", 
+            but the American term "head-shot" the English simply refuse to adopt.
+          </ion-card-content>
+        </ion-card>
+      </ion-col>
 
-  <p>
-    This starter project is our way of helping you get a functional app running in record time.
-  </p>
-  <p>
-    Follow along on the tutorial section of the Ionic docs!
-  </p>
+      <ion-col col-12 col-sm>
+        <ion-card color="secondary">
+          <ion-card-header>
+            Complaints
+          </ion-card-header>
+          <ion-card-content>
+            The British use the term "header", 
+            but the American term "head-shot" the English simply refuse to adopt.
+          </ion-card-content>
+        </ion-card>
+      </ion-col>
+
+      <ion-col col-12 col-sm>
+        <ion-card color="dark" >
+          <ion-card-header>
+            Pendings
+          </ion-card-header>
+          <ion-card-content>
+            The British use the term "header", 
+            but the American term "head-shot" the English simply refuse to adopt.
+          </ion-card-content>
+        </ion-card>
+      </ion-col>
+    </ion-row>
+  </ion-grid>
   <p>
     <button ion-button color="primary" menuToggle>Toggle Menu</button>
   </p>
