--- a/src/pages/hello-ionic/hello-ionic.html
+++ b/src/pages/hello-ionic/hello-ionic.html
@@ -12,9 +12,33 @@
   <ion-grid>
     <ion-row>
       <ion-col col-12 col-sm>
-        <ion-card color="primary" >
+        <ion-card color="appointments" >
           <ion-card-header>
-            Appointments
+            <ion-row>
+              <ion-col col-6>
+                <ion-icon name="bug" style="font-size:80px;"></ion-icon>
+               </ion-col>
+               <ion-col col-6>
+                Appointments!
+               </ion-col>
+             </ion-row>
+             <ion-row>
+               <ion-col col-offset-8 col-4>
+                Appointments!
+               </ion-col>
+             </ion-row>
+          </ion-card-header>
+         
+          <ion-card-content>
+           View Details
+          </ion-card-content>
+        </ion-card>
+      </ion-col>
+
+      <ion-col col-12 col-sm>
+        <ion-card color="tasks">
+          <ion-card-header>
+            Pending Tasks!
           </ion-card-header>
           <ion-card-content>
             The British use the term "header", 
@@ -24,9 +48,9 @@
       </ion-col>
 
       <ion-col col-12 col-sm>
-        <ion-card color="danger">
+        <ion-card color="comments">
           <ion-card-header>
-            Notifications
+            Comments!
           </ion-card-header>
           <ion-card-content>
             The British use the term "header", 
@@ -36,21 +60,9 @@
       </ion-col>
 
       <ion-col col-12 col-sm>
-        <ion-card color="secondary">
+        <ion-card color="complaints" >
           <ion-card-header>
-            Complaints
-          </ion-card-header>
-          <ion-card-content>
-            The British use the term "header", 
-            but the American term "head-shot" the English simply refuse to adopt.
-          </ion-card-content>
-        </ion-card>
-      </ion-col>
-
-      <ion-col col-12 col-sm>
-        <ion-card color="dark" >
-          <ion-card-header>
-            Pendings
+            Complaints!
           </ion-card-header>
           <ion-card-content>
             The British use the term "header", 
