Font-awesome using css

--- a/src/pages/hello-ionic/hello-ionic.html
+++ b/src/pages/hello-ionic/hello-ionic.html
@@ -91,5 +91,6 @@
   <p>
     <button ion-button color="primary" menuToggle>Toggle Menu</button>
   </p>
+  <i class="fa fa-camera-retro fa-lg"></i>
 
 </ion-content>
