Dashboard and side menu changes

--- a/src/pages/hello-ionic/hello-ionic.html
+++ b/src/pages/hello-ionic/hello-ionic.html
@@ -9,10 +9,15 @@
 
 
 <ion-content padding>
+  <div class="heading">
+    <h1> Dashboard </h1>
+    <hr/>
+  </div>
   <ion-grid>
     <ion-row>
       <ion-col col-12 col-sm-4 col-md-6 col-lg-3>
         <ion-card color="appointments" class="dashboard-appointment">
+         
           <ion-card-header>
             <ion-row>
               <ion-col col-xs-8>
@@ -124,7 +129,7 @@
           <ion-card-header class="panel-heading" no-padding>
             <ion-card-title><i class="fa fa-money"></i> Recent Transactions</ion-card-title>
           </ion-card-header>
-          <ion-card-content>
+          <ion-card-content class="table-responsive">
             <table>
               <tr>
                 <th>Date</th>
@@ -140,9 +145,9 @@
               </tr>
               <tr>
                 <td>2</td>
-                <td>1234</td>
-                <td>Praveen</td>
-                <td>23456723232</td>
+                <td>123544564565464</td>
+                <td>Praveegfbfghfhfn</td>
+                <td>23456727775577757557575753232</td>
               </tr>
             </table> 
           </ion-card-content>
